variables.RunFour.scala.error
Compilation error:
RunFour:2: error: value unary_! is not a member of Int
while (!estSurBiscuit() && (!NumBiscuit!=4)) {
                            ^