variables.RunFour.scala.code
var NumBiscuit:Int = 0
while (!estSurBiscuit() && (!NumBiscuit!=4)) {
  avance()
  if (estSurBiscuit) {
  NumBiscuit = NumBiscuit + 1
  }
}
  